fix(component): add missing props. Fix content wrap.
affects: ak-single-select

--- a/packages/ak-single-select/src/styles.less
+++ b/packages/ak-single-select/src/styles.less
@@ -15,6 +15,7 @@
 .content {
   flex: 1 1 auto;
   margin: 6px 8px;
+  white-space: nowrap;
 }
 
 .expand {
